[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { version = "0.15.6", features = ["expose-test-schema"] }
rocket = { version = "0.4.9", default-features = false }
juniper_rocket = "0.7.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"